# Miracle

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh  create_test_audio.c  create_texture.c
src/: main.c
src/audio/: audio.c  audio.h
src/core/: input.c  input.h  window.c  window.h
src/physics/: physics.c  physics.h  physics_bullet.cpp
src/renderer/: camera.c  camera.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
